[package]
name = "mdr32f9q2i-pac"
authors = ["Dblm0"]
version = "0.1.0"
edition = "2021"
description = "Peripheral Access Crate for Milandr's MDR32F9Q2I microcontroller"
keywords = ["no-std", "arm", "cortex-m", "milandr", "peripherals"]
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.3" }
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
vcell = { version = "0.1.3" }

[features]
rt = ["cortex-m-rt/device"]
